--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@strapi/design-system": "^0.0.1-alpha.70",
     "@strapi/helper-plugin": "^4.1.5",
-    "ckeditor5-build-strapi-wysiwyg": "^2.1.1",
+    "ckeditor5-build-strapi-wysiwyg": "https://github.com/muhdlaziem/ckeditor5-build-strapi-wysiwyg.git",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
